--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -65,6 +65,7 @@
     <script src="static/app/base/ModalService.js"></script>
     <script src="static/app/base/SnapService.js"></script>
     <script src="static/app/base/SwiperService.js"></script>
+    <script src="static/app/base/swiperClickDirective.js"></script>
     <script src="static/app/base/TagsService.js"></script>
     <script src="static/app/base/UISessionService.js"></script>
     <script src="static/app/base/UserSessionService.js"></script>
