--- a/frontend/core/src/main/webapp/static/app/tasks/overview.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/overview.html
@@ -6,7 +6,7 @@
         <div ng-include="'static/app/base/listsOverview.html'" include-replace></div>
         <div ng-include="'static/app/base/contextsOverview.html'" include-replace></div>
         <section>
-          <h3><a href class="page-header" ng-click="gotoDetails('unsorted')">unsorted</a></h3>
+          <h3><a href class="page-header" swiper-click="gotoDetails('unsorted')">unsorted</a></h3>
         </section>
       </div>
     </div>
