Added swiper-prevent directive which fixed scroll flickering on overview and notes unsorted slides

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -78,6 +78,7 @@
     <script src="static/app/base/scrollableDirective.js"></script>
     <script src="static/app/base/scrollToDirective.js"></script>
     <script src="static/app/base/swiperContainerDirective.js"></script>
+    <script src="static/app/base/swiperPreventDirective.js"></script>
     <script src="static/app/base/swiperSlideDirective.js"></script>
     <script src="static/app/base/onboarding.js"></script>
 
