--- a/frontend/core/src/main/webapp/static/app/tasks/details.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/details.html
@@ -7,18 +7,20 @@
           <div class="swiper-slide" ng-repeat="list in lists" swiper-slide="tasks/details/{{list.uuid}}" slide-index="$index" ng-init="subtask = {relationships: {list: list.uuid}}">
             <div class="inner-slide-content-container">
               <section class="list">
-                <div class="inner-page-content-container" accordion>
-                  <div accordion-title="list" edit-item="editList(list)" edit-item-title="editListTitle(list)" bold-title="true" has-complete="false" toggle-complete></div>
-                  <div ng-if="isOpen(list)" class="accordion-body" editable-field-container="auto">
-                    <div class="accordion-inner" ng-include="'static/app/base/listActions.html'"></div>
-                  </div>
-                  <div ng-if="showContent('tasks')" ng-repeat="task in tasks | itemsFilter:{name:'byListUUID', filterBy: list.uuid}">
-                    <div accordion-title="task" edit-item="editTask(task)" edit-item-title="editTaskTitle(task)" has-complete="true" toggle-complete="taskChecked(task)"></div>
-                    <div ng-if="isOpen(task)" class="accordion-body" editable-field-container="auto">
-                      <div class="accordion-inner" ng-init="initializeTask(task)" ng-include="'static/app/tasks/taskActions.html'"></div>
+                <div>
+                  <div class="inner-page-content-container" accordion>
+                    <div accordion-title="list" edit-item="editList(list)" edit-item-title="editListTitle(list)" bold-title="true" has-complete="false" toggle-complete></div>
+                    <div ng-if="isOpen(list)" class="accordion-body" editable-field-container="auto">
+                      <div class="accordion-inner" ng-include="'static/app/base/listActions.html'"></div>
                     </div>
+                    <div ng-if="showContent('tasks')" ng-repeat="task in tasks | itemsFilter:{name:'byListUUID', filterBy: list.uuid}">
+                      <div accordion-title="task" edit-item="editTask(task)" edit-item-title="editTaskTitle(task)" has-complete="true" toggle-complete="taskChecked(task)"></div>
+                      <div ng-if="isOpen(task)" class="accordion-body" editable-field-container="auto">
+                        <div class="accordion-inner" ng-init="initializeTask(task)" ng-include="'static/app/tasks/taskActions.html'"></div>
+                      </div>
+                    </div>
+                    <div ng-include="'static/app/tasks/addTask.html'" include-replace></div>
                   </div>
-                  <div ng-include="'static/app/tasks/addTask.html'" include-replace></div>
                 </div>
               </section>
             </div>
@@ -26,31 +28,33 @@
           <div class="swiper-slide" ng-repeat="context in contexts" swiper-slide="tasks/details/{{context.uuid}}" slide-index="lists.length + $index" ng-init="subtask = {relationships: {context: context.uuid}}">
             <div class="inner-slide-content-container">
               <section class="context">
-                <div class="inner-page-content-container" accordion>
-                  <div accordion-title="context" edit-item="editContext(context)" edit-item-title="editContextTitle(context)" bold-title="true" title-prefix="'@'" has-complete="false" toggle-complete></div>
-                  <div ng-if="isOpen(context)" class="accordion-body swiper-no-swiping" editable-field-container="auto">
-                    <div class="accordion-inner">
-                      <ul class="button-row">
-                        <li class="button-container left-of-two border-right">
-                          <button class="normal-button" type="button" ng-click="closeAndCall(context, contextQuickEditDone)">
-                            done
-                          </button>
-                        </li>
-                        <li class="button-container right-of-two">
-                          <button class="delete-button" type="button" ng-click="closeAndCall(context, deleteContext)">
-                            delete
-                          </button>
-                        </li>
-                      </ul>
+                <div>
+                  <div class="inner-page-content-container" accordion>
+                    <div accordion-title="context" edit-item="editContext(context)" edit-item-title="editContextTitle(context)" bold-title="true" title-prefix="'@'" has-complete="false" toggle-complete></div>
+                    <div ng-if="isOpen(context)" class="accordion-body swiper-no-swiping" editable-field-container="auto">
+                      <div class="accordion-inner">
+                        <ul class="button-row">
+                          <li class="button-container left-of-two border-right">
+                            <button class="normal-button" type="button" ng-click="closeAndCall(context, contextQuickEditDone)">
+                              done
+                            </button>
+                          </li>
+                          <li class="button-container right-of-two">
+                            <button class="delete-button" type="button" ng-click="closeAndCall(context, deleteContext)">
+                              delete
+                            </button>
+                          </li>
+                        </ul>
+                      </div>
                     </div>
-                  </div>
-                  <div ng-if="showContent('tasks')" ng-repeat="task in tasks | itemsFilter:{name:'byContextUUID', filterBy: context.uuid}">
-                    <div accordion-title="task" edit-item="editTask(task)" edit-item-title="editTaskTitle(task)" has-complete="true" toggle-complete="taskChecked(task)"></div>
-                    <div ng-if="isOpen(task)" class="accordion-body" editable-field-container="auto">
-                      <div class="accordion-inner" ng-init="initializeTask(task)" ng-include="'static/app/tasks/taskActions.html'"></div>
+                    <div ng-if="showContent('tasks')" ng-repeat="task in tasks | itemsFilter:{name:'byContextUUID', filterBy: context.uuid}">
+                      <div accordion-title="task" edit-item="editTask(task)" edit-item-title="editTaskTitle(task)" has-complete="true" toggle-complete="taskChecked(task)"></div>
+                      <div ng-if="isOpen(task)" class="accordion-body" editable-field-container="auto">
+                        <div class="accordion-inner" ng-init="initializeTask(task)" ng-include="'static/app/tasks/taskActions.html'"></div>
+                      </div>
                     </div>
+                    <div ng-include="'static/app/tasks/addTask.html'" include-replace></div>
                   </div>
-                  <div ng-include="'static/app/tasks/addTask.html'" include-replace></div>
                 </div>
               </section>
             </div>
