--- a/frontend/core/src/main/webapp/static/app/main/inbox.html
+++ b/frontend/core/src/main/webapp/static/app/main/inbox.html
@@ -3,31 +3,33 @@
     <div class="column">
       <div class="page-heading" ng-init="heading = 'inbox'; omnibarFeature = 'inbox'" ng-include="'static/app/main/omnibar.html'"></div>
       <div ng-hide="omnibarVisible" id="inbox-page-content-container" class="content-container page-content-container no-heading-content-container omnibar-animation">
-        <div class="accordion-wrapper">
-          <div class="inner-page-content-container" accordion>
-            <div ng-if="showContent('inbox')" ng-repeat="item in items">
-              <div accordion-title="item" edit-item="editItem(item)" edit-item-title="editItemTitle(item)" has-complete="false" toggle-complete></div>
-              <div ng-if="isOpen(item) || isInboxSorting(item)" class="accordion-body" editable-field-container="auto">
-                <div class="accordion-inner" ng-include="'static/app/main/itemActions.html'"></div>
+        <div class="scroll-container">
+          <div class="accordion-wrapper">
+            <div class="inner-page-content-container" accordion>
+              <div ng-if="showContent('inbox')" ng-repeat="item in items">
+                <div accordion-title="item" edit-item="editItem(item)" edit-item-title="editItemTitle(item)" has-complete="false" toggle-complete></div>
+                <div ng-if="isOpen(item) || isInboxSorting(item)" class="accordion-body" editable-field-container="auto">
+                  <div class="accordion-inner" ng-include="'static/app/main/itemActions.html'"></div>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-        <form class="add-element" role="form" name="itemToInbox" ng-init="newItem = {}" ng-submit="callAndRefresh(addNewItem, newItem)" autocapitalize="none" autocorrect="off" add-item data-snap-ignore="{{ignoreSnap}}">
-          <div class="form-group" editable-field-container="disable">
-            <label class="sr-only" for="itemTitle">title</label>
-            <div>
-              <input type="text" id="itemTitle" class="simple-input" ng-model="newItem.title" ng-blur="blurredAddItemElement()" ng-focus="focusedAddItemElement()" placeholder="add item..." maxlength="128" editable-field></input>
+          <form class="add-element" role="form" name="itemToInbox" ng-init="newItem = {}" ng-submit="callAndRefresh(addNewItem, newItem)" autocapitalize="none" autocorrect="off" add-item data-snap-ignore="{{ignoreSnap}}">
+            <div class="form-group" editable-field-container="disable">
+              <label class="sr-only" for="itemTitle">title</label>
+              <div>
+                <input type="text" id="itemTitle" class="simple-input" ng-model="newItem.title" ng-blur="blurredAddItemElement()" ng-focus="focusedAddItemElement()" placeholder="add item..." maxlength="128" editable-field></input>
+              </div>
             </div>
-          </div>
-        </form>
-        <footer ng-if="!(isDesktop && isMenuOpen) && (items.length > 2 && sortingItem === undefined)">
-          <nav id="inbox-footer" class="swiper-no-swiping item-actions" role="navigation">
-            <button class="wide-button border-button" ng-click="sortInbox()">
-              <span class="button-text" ng-bind="getSortingText()"></span>
-            </button>
-          </nav>
-        </footer>
+          </form>
+          <footer ng-if="!(isDesktop && isMenuOpen) && (items.length > 2 && sortingItem === undefined)">
+            <nav id="inbox-footer" class="swiper-no-swiping item-actions" role="navigation">
+              <button id="scroll-to-element" class="wide-button border-button" ng-click="sortInbox()">
+                <span class="button-text" ng-bind="getSortingText()"></span>
+              </button>
+            </nav>
+          </footer>
+        </div>
       </div>
     </div>
     <aside class="column">
