Improved overall performance by caching two line fade width

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -72,6 +72,7 @@
     <script src="static/app/base/accordionDirective.js"></script>
     <script src="static/app/base/addItemDirective.js"></script>
     <script src="static/app/base/accordionTitleDirective.js"></script>
+    <script src="static/app/base/accordionTitleLinkDirective.js"></script>
     <script src="static/app/base/expandingTextareaDirective.js"></script>
     <script src="static/app/base/featureContainerDirective.js"></script>
     <script src="static/app/base/snapDrawerDragDirective.js"></script>
