--- a/frontend/core/src/main/webapp/static/app/base/accordionTitle.html
+++ b/frontend/core/src/main/webapp/static/app/base/accordionTitle.html
@@ -3,16 +3,16 @@
     <div ng-if="hasComplete" class="table-wrapper" >
       <input type="checkbox" class="left-checkbox-wrapper" id="{{item.uuid}}" name="checkbox" class="input-checkbox" ng-checked="item.completed" swiper-click="itemChecked()" />
       <label class="checkbox swiper-no-swiping" for="{{item.uuid}}"></label>
-      <a id="accordionTitleLink" ng-class="getTitleLinkClasses()" class="accordion-toggle" href swiper-click="clickTitle()">
-        <span id="accordionTitleLinkContent">
+      <a id="accordionTitleLink" ng-class="getTitleClasses()" class="accordion-toggle" href swiper-click="clickTitle()">
+        <span accordion-title-link="item.title.length" accordion-title-link-bold="boldTitle" id="accordionTitleLinkContent">
           {{getItemTitle()}}
         </span>
       </a>
     </div>
     <div ng-if="!hasComplete" id="soloAccordionTitleLinkWrapper" class="table-wrapper">
       <div id="accordionTitleHeightFix"><br/></div>
-      <a id="accordionTitleLink" ng-class="getTitleLinkClasses()" class="accordion-toggle" href swiper-click="clickTitle()">
-        <span id="accordionTitleLinkContent">{{getItemTitle()}}</span>
+      <a id="accordionTitleLink" ng-class="getTitleClasses()" class="accordion-toggle" href swiper-click="clickTitle()">
+        <span accordion-title-link="item.title.length" accordion-title-link-bold="boldTitle" id="accordionTitleLinkContent">{{getItemTitle()}}</span>
       </a>
     </div>
   </div>
@@ -21,7 +21,7 @@
       <input type="checkbox" id="{{item.uuid}}" name="checkbox" class="input-checkbox" ng-checked="item.completed" ng-click="itemChecked()" editable-field />
       <label class="checkbox swiper-no-swiping" for="{{item.uuid}}"></label>
     </div>
-    <div ng-class="getTitleInputClasses()">
+    <div ng-class="getTitleClasses()">
       <label class="sr-only" for="accordionTitleInput">title</label>
       <textarea id="accordionTitleInput" type="text" ng-focus="startTitleEdit($event)" ng-keypress="evaluateKeyPress($event)" class="simple-input swiper-no-swiping" ng-model="item.title" placeholder="title..." maxlength="128" required expanding-textarea editable-field /></textarea>
     </div>
