Refactored synchronization logic to dedicated service for better readability

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -115,6 +115,7 @@
     <script src="static/app/main/MainController.js"></script>
     <script src="static/app/main/FooterController.js"></script>
     <script src="static/app/main/PageNotFoundController.js"></script>
+    <script src="static/app/main/SynchronizeService.js"></script>
     <script src="static/app/main/itemsFilter.js"></script>
 
     <script src="static/app/admin/AdminController.js"></script>
