Implemented history synchronization from the backend. Archive and dashboard now initially working.

--- a/frontend/core/src/main/webapp/static/app/dashboard/dashboardSlide.html
+++ b/frontend/core/src/main/webapp/static/app/dashboard/dashboardSlide.html
@@ -1,7 +1,7 @@
 <section id="dashboard-{{dashboardSlide}}" class="two-column-grid page">
   <div class="column">
     <div class="page-heading swiper-no-swiping" ng-include="'static/app/main/omnibar.html'"></div>
-    <div ng-hide="omnibarVisible && isActiveSlide({{dashboardSlide}})" class="content-container page-content-container no-heading-content-container">
+    <div ng-if="!isCompletedLoading && !isArchivedLoading" ng-hide="omnibarVisible && isActiveSlide({{dashboardSlide}})" class="content-container page-content-container no-heading-content-container">
       <div class="inner-page-content-container">
         <ul>
           <li class="simple-content dashboard-info" ng-repeat="message in dashboardSlides[slideIndex].messages">
@@ -11,6 +11,7 @@
         </ul>
       </div>
     </div>
+    <div ng-if="isCompletedLoading || isArchivedLoading" class="loading-animation" loading-animation></div>
   </div>
   <aside class="column">
     TODO
