--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -28,6 +28,7 @@
     <script src="static/lib/angularjs/angular-animate.js"></script>
     <script src="static/lib/angularjs/angular-mocks.js"></script>
     <script src="static/lib/angularjs/angular-route.js"></script>
+    <script src="static/lib/angularjs/ngInfiniteScroll.js"></script>
 
     <script src="static/lib/base64.js"></script>
 
