Added possibility to move task/note directly to archived lists, showing all active tasks and notes in omnibar search results.

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -45,6 +45,7 @@
     <script src="static/common/includeReplaceDirective.js"></script>
     <script src="static/common/iscroll-probe.js"></script>
     <script src="static/common/loadingAnimationDirective.js"></script>
+    <script src="static/common/optionsDisabledDirective.js"></script>
     <script src="static/common/passwordMatchDirective.js"></script>
     <script src="static/common/swiper.js"></script>
     <script src="static/common/expanding.js"></script>
