--- a/frontend/core/src/main/webapp/static/app/main/omnibar.html
+++ b/frontend/core/src/main/webapp/static/app/main/omnibar.html
@@ -51,7 +51,7 @@
       <div ng-show="filteredTasks.length" class="filtered-items">
         <h3><a href ng-click="gotoTasks()">tasks</a></h3>
         <div class="inner-page-content-container" accordion>
-          <div ng-repeat="task in filteredTasks = (tasks | filter:{title:searchText.delayed} | limitTo:10)">
+          <div ng-repeat="task in filteredTasks = (allActiveTasks | filter:{title:searchText.delayed} | limitTo:10)">
             <div accordion-title="task" edit-item="editTask(task)" edit-item-title="editTaskTitle(task)" has-complete="true" toggle-complete="taskChecked(task)"></div>
             <div ng-if="isOpen(task)" class="accordion-body" editable-field-container="auto">
               <div class="accordion-inner" ng-init="initializeTask(task)" ng-include="'static/app/tasks/taskActions.html'"></div>
@@ -62,7 +62,7 @@
       <div ng-show="filteredNotes.length" class="filtered-items">
         <h3><a href ng-click="gotoNotes()">notes</a></h3>
         <div class="inner-page-content-container" accordion>
-          <div ng-repeat="note in filteredNotes = (notes | filter:{title:searchText.delayed} | limitTo:10)">
+          <div ng-repeat="note in filteredNotes = (allNotes | filter:{title:searchText.delayed} | limitTo:10)">
             <div accordion-title="note" edit-item="editNote(note)" edit-item-title="editNoteTitle(note)" has-complete="false" toggle-complete></div>
             <div ng-if="isOpen(note)" class="accordion-body" editable-field-container="auto">
               <div class="accordion-inner" ng-include="'static/app/notes/noteActions.html'"></div>
