fixed backdrop breaking input and select styles  * changed editable field focus and blur event callbacks jQuery $element.addClass and $element.removeClass methods to use $animate service methods removed quick edit task indentation CSS set date input color with class refactoring

--- a/frontend/core/src/main/webapp/static/app/tasks/taskActions.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskActions.html
@@ -34,10 +34,10 @@
         <div class="form-group">
           <div ng-if="openSnooze.showPickDate === true">
             <label for="taskDue" class="sr-only">pick date</label>
-            <input type="date" id="taskDue" class="swiper-no-swiping highlighted-link" ng-model="task.date" ng-blur="hideDateInput()" date-input="{{openSnooze.showPickDate}}" date-input-set-focus="true" editable-field>
+            <input type="date" id="taskDue" class="swiper-no-swiping highlighted-link" ng-model="task.date" ng-blur="hideDateInput()" date-input="{{openSnooze.showPickDate}}" date-input-set-focus="true">
           </div>
           <div ng-if="openSnooze.showPickDate === false" class="item-actions">
-            <span class="simple-input highlighted-link date-input-placeholder" ng-click="openSnooze.showPickDate = true">pick date</span>
+            <span class="simple-input highlighted-link" ng-click="openSnooze.showPickDate = true">pick date</span>
           </div>
         </div>
       </li>
