Exposed account and dashboard to everyone

--- a/frontend/core/src/main/webapp/static/app/auth/menu.html
+++ b/frontend/core/src/main/webapp/static/app/auth/menu.html
@@ -4,23 +4,21 @@
   </div>
   <ul>
     <li>
+      <a href class="feature-link" ng-class="getFeatureClass('inbox')" ng-click="gotoFeature('inbox')">inbox</a>
+    </li>
+    <li>
       <a href class="feature-link" ng-class="getFeatureClass('tasks')" ng-click="gotoFeature('tasks')">tasks</a>
     </li>
     <li>
       <a href class="feature-link" ng-class="getFeatureClass('notes')" ng-click="gotoFeature('notes')">notes</a>
     </li>
-    <li id="{{isAdmin() ? '' : 'last-feature'}}">
-      <a href class="feature-link" ng-class="getFeatureClass('inbox')" ng-click="gotoFeature('inbox')">inbox</a>
+    <li class="last-feature">
+      <a href class="feature-link" ng-class="getFeatureClass('archive')" ng-click="gotoFeature('archive')">archive</a>
     </li>
 
-    <div ng-if="isAdmin()">
-      <li >
-        <a href class="feature-link" ng-class="getFeatureClass('dashboard')" ng-click="gotoFeature('dashboard')">dashboard</a>
-      </li>
-      <li id="last-feature">
-        <a href class="feature-link" ng-class="getFeatureClass('archive')" ng-click="gotoFeature('archive')">archive</a>
-      </li>
-    </div>
+    <li >
+      <a href ng-class="getFeatureClass('dashboard')" ng-click="gotoFeature('dashboard')">dashboard</a>
+    </li>
 
     <div ng-if="useCollectives()">
       <li id="my">
